started working on the model

--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow"
+    "import tensorflow\n",
+    "from tensorflow.keras import datasets, layers, models\n",
+    "import matplotlib.pyplot as plt"
    ]
   }
  ],
