started working on the model

--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6647a56b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow\n",
-    "from tensorflow.keras import datasets, layers, models\n",
+    "from tensorflow import keras\n",
+    "from keras import datasets, layers, models\n",
     "import matplotlib.pyplot as plt"
    ]
   }
