nothing to see here

--- a/GAN working copy.ipynb
+++ b/GAN working copy.ipynb
@@ -35,7 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xtrain = (xtrain - 127.5)/127.5"
+    "xtrain = (xtrain - 127.5)/127.5\n",
+    "print(xtrain)"
    ]
   },
   {
