nothing to see here

--- a/GAN working copy.ipynb
+++ b/GAN working copy.ipynb
@@ -15,7 +15,7 @@
     "from keras.optimizers import Adam\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import keras\n"
+    "import keras"
    ]
   },
   {
