--- a/GAN working copy.ipynb
+++ b/GAN working copy.ipynb
@@ -174,7 +174,8 @@
     "                plt.imshow(generatedimage[i].reshape(28,28), cmap= \"binary\")\n",
     "                count = count + 1\n",
     "                plt.axis(\"off\")\n",
-    "                plt.savefig(figname)\n",
+    "                if((count + 1) % 25 == 0):\n",
+    "                    plt.savefig(figname)\n",
     "            plt.show()"
    ]
   }
@@ -195,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
