--- a/GAN working copy.ipynb
+++ b/GAN working copy.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(xtrain, ytrain), (xtest, ytest) = fashion_mnist.load_data()"
+    "(xtrain, ytrain), (xtest, ytest) = fashion_mnist.load_data()\n",
+    "print(type(xtrain))"
    ]
   },
   {
@@ -174,8 +175,7 @@
     "                plt.imshow(generatedimage[i].reshape(28,28), cmap= \"binary\")\n",
     "                count = count + 1\n",
     "                plt.axis(\"off\")\n",
-    "                if((count + 1) % 25 == 0):\n",
-    "                    plt.savefig(figname)\n",
+    "                plt.savefig(figname)\n",
     "            plt.show()"
    ]
   }
@@ -196,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
