--- a/gan3.ipynb
+++ b/gan3.ipynb
@@ -15,7 +15,7 @@
     "from keras.layers import BatchNormalization\n",
     "from keras.layers import LeakyReLU\n",
     "from keras.models import Sequential, Model\n",
-    "from keras.layers import Conv2DTranspose\n",
+    "from keras.layers import Conv2D\n",
     "from keras.optimizers import Adam\n",
     "from keras.preprocessing.image import ImageDataGenerator\n"
    ]
