--- a/gan3.ipynb
+++ b/gan3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
     "from keras.layers import BatchNormalization\n",
     "from keras.layers import LeakyReLU\n",
     "from keras.models import Sequential, Model\n",
-    "from keras.layers import Conv2D\n",
+    "from keras.layers import Conv2D, Conv2DTranspose\n",
     "from keras.optimizers import Adam\n",
     "from keras.preprocessing.image import ImageDataGenerator\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -34,16 +34,16 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "Exception encountered when calling layer \"reshape_5\" (type Reshape).\n\ntotal size of new array must be unchanged, input_shape = [16, 16, 131072], output_shape = [32, 32, 128]\n\nCall arguments received by layer \"reshape_5\" (type Reshape):\n  • inputs=tf.Tensor(shape=(None, 16, 16, 131072), dtype=float32)",
+     "evalue": "Exception encountered when calling layer \"reshape_9\" (type Reshape).\n\ntotal size of new array must be unchanged, input_shape = [16, 16, 131072], output_shape = [32, 32, 128]\n\nCall arguments received by layer \"reshape_9\" (type Reshape):\n  • inputs=tf.Tensor(shape=(None, 16, 16, 131072), dtype=float32)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 33\u001b[0m\n\u001b[0;32m     31\u001b[0m generator\u001b[39m.\u001b[39madd(Dense(\u001b[39m128\u001b[39m \u001b[39m*\u001b[39m \u001b[39m32\u001b[39m \u001b[39m*\u001b[39m \u001b[39m32\u001b[39m))\n\u001b[0;32m     32\u001b[0m generator\u001b[39m.\u001b[39madd(LeakyReLU(\u001b[39m0.2\u001b[39m))\n\u001b[1;32m---> 33\u001b[0m generator\u001b[39m.\u001b[39;49madd(Reshape((\u001b[39m32\u001b[39;49m, \u001b[39m32\u001b[39;49m, \u001b[39m128\u001b[39;49m)))\n\u001b[0;32m     34\u001b[0m generator\u001b[39m.\u001b[39madd(BatchNormalization())\n\u001b[0;32m     35\u001b[0m generator\u001b[39m.\u001b[39madd(Conv2DTranspose(\u001b[39m64\u001b[39m, (\u001b[39m5\u001b[39m, \u001b[39m5\u001b[39m), strides\u001b[39m=\u001b[39m(\u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m), padding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msame\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[9], line 33\u001b[0m\n\u001b[0;32m     31\u001b[0m generator\u001b[39m.\u001b[39madd(Dense(\u001b[39m128\u001b[39m \u001b[39m*\u001b[39m \u001b[39m32\u001b[39m \u001b[39m*\u001b[39m \u001b[39m32\u001b[39m))\n\u001b[0;32m     32\u001b[0m generator\u001b[39m.\u001b[39madd(LeakyReLU(\u001b[39m0.2\u001b[39m))\n\u001b[1;32m---> 33\u001b[0m generator\u001b[39m.\u001b[39;49madd(Reshape((\u001b[39m32\u001b[39;49m, \u001b[39m32\u001b[39;49m, \u001b[39m128\u001b[39;49m)))\n\u001b[0;32m     34\u001b[0m generator\u001b[39m.\u001b[39madd(BatchNormalization())\n\u001b[0;32m     35\u001b[0m generator\u001b[39m.\u001b[39madd(Conv2DTranspose(\u001b[39m64\u001b[39m, (\u001b[39m5\u001b[39m, \u001b[39m5\u001b[39m), strides\u001b[39m=\u001b[39m(\u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m), padding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msame\u001b[39m\u001b[39m'\u001b[39m))\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\tensorflow\\python\\trackable\\base.py:204\u001b[0m, in \u001b[0;36mno_automatic_dependency_tracking.<locals>._method_wrapper\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    202\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_self_setattr_tracking \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n\u001b[0;32m    203\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 204\u001b[0m   result \u001b[39m=\u001b[39m method(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    205\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_self_setattr_tracking \u001b[39m=\u001b[39m previous_value  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\keras\\src\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\keras\\src\\layers\\reshaping\\reshape.py:118\u001b[0m, in \u001b[0;36mReshape._fix_unknown_dimension\u001b[1;34m(self, input_shape, output_shape)\u001b[0m\n\u001b[0;32m    116\u001b[0m     output_shape[unknown] \u001b[39m=\u001b[39m original \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m known\n\u001b[0;32m    117\u001b[0m \u001b[39melif\u001b[39;00m original \u001b[39m!=\u001b[39m known:\n\u001b[1;32m--> 118\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m    119\u001b[0m \u001b[39mreturn\u001b[39;00m output_shape\n",
-      "\u001b[1;31mValueError\u001b[0m: Exception encountered when calling layer \"reshape_5\" (type Reshape).\n\ntotal size of new array must be unchanged, input_shape = [16, 16, 131072], output_shape = [32, 32, 128]\n\nCall arguments received by layer \"reshape_5\" (type Reshape):\n  • inputs=tf.Tensor(shape=(None, 16, 16, 131072), dtype=float32)"
+      "\u001b[1;31mValueError\u001b[0m: Exception encountered when calling layer \"reshape_9\" (type Reshape).\n\ntotal size of new array must be unchanged, input_shape = [16, 16, 131072], output_shape = [32, 32, 128]\n\nCall arguments received by layer \"reshape_9\" (type Reshape):\n  • inputs=tf.Tensor(shape=(None, 16, 16, 131072), dtype=float32)"
      ]
     }
    ],
